@@ -2,34 +2,40 @@ package net.minelink.ctplus.nms;
 
 import com.google.common.collect.Lists;
 import com.mojang.datafixers.util.Pair;
-import java.io.File;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.lang.reflect.Field;
-import java.util.List;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
 import net.minecraft.nbt.NbtIo;
 import net.minecraft.network.protocol.Packet;
-import net.minecraft.network.protocol.game.ClientboundPlayerInfoPacket;
+import net.minecraft.network.protocol.game.ClientGamePacketListener;
+import net.minecraft.network.protocol.game.ClientboundPlayerInfoRemovePacket;
+import net.minecraft.network.protocol.game.ClientboundPlayerInfoUpdatePacket;
 import net.minecraft.network.protocol.game.ClientboundSetEquipmentPacket;
 import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EquipmentSlot;
+import net.minecraft.world.entity.ai.attributes.AttributeInstance;
+import net.minecraft.world.entity.ai.attributes.AttributeMap;
 import net.minecraft.world.food.FoodData;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
 import net.minecraft.world.level.storage.PlayerDataStorage;
 import net.minelink.ctplus.compat.base.NpcIdentity;
 import net.minelink.ctplus.compat.base.NpcPlayerHelper;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
-import org.bukkit.craftbukkit.v1_18_R2.CraftWorld;
-import org.bukkit.craftbukkit.v1_18_R2.entity.CraftPlayer;
+import org.bukkit.craftbukkit.CraftWorld;
+import org.bukkit.craftbukkit.entity.CraftPlayer;
 import org.bukkit.entity.Player;
 
+import java.io.File;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.lang.reflect.Field;
+import java.util.List;
+
 public class NpcPlayerHelperImpl implements NpcPlayerHelper {
+
     @Override
     public Player spawn(Player player) {
         NpcPlayer npcPlayer = NpcPlayer.valueOf(player);
@@ -44,12 +50,11 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
         for (ServerPlayer serverPlayer : MinecraftServer.getServer().getPlayerList().getPlayers()) {
             if (serverPlayer instanceof NpcPlayer) continue;
 
-            ClientboundPlayerInfoPacket packet = new ClientboundPlayerInfoPacket(ClientboundPlayerInfoPacket.Action.ADD_PLAYER, npcPlayer);
+            ClientboundPlayerInfoUpdatePacket packet = new ClientboundPlayerInfoUpdatePacket(ClientboundPlayerInfoUpdatePacket.Action.ADD_PLAYER, npcPlayer);
             serverPlayer.connection.send(packet);
         }
 
-        worldServer.entityManager.getEntityGetter().get(player.getUniqueId()).remove(Entity.RemovalReason.DISCARDED);
-        worldServer.entityManager.addNewEntity(npcPlayer);
+        worldServer.addFreshEntity(npcPlayer);
 
         return npcPlayer.getBukkitEntity();
     }
@@ -64,11 +69,11 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
         for (ServerPlayer serverPlayer : MinecraftServer.getServer().getPlayerList().getPlayers()) {
             if (serverPlayer instanceof NpcPlayer) continue;
 
-            ClientboundPlayerInfoPacket packet = new ClientboundPlayerInfoPacket(ClientboundPlayerInfoPacket.Action.REMOVE_PLAYER, entity);
+            ClientboundPlayerInfoRemovePacket packet = new ClientboundPlayerInfoRemovePacket(List.of(entity.getUUID()));
             serverPlayer.connection.send(packet);
         }
 
-        ServerLevel worldServer = entity.getLevel();
+        ServerLevel worldServer = entity.serverLevel();
         worldServer.chunkSource.removeEntity(entity);
         worldServer.getPlayers(serverPlayer -> serverPlayer instanceof NpcPlayer).remove(entity);
         removePlayerList(player);
@@ -98,18 +103,24 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
 
         for (EquipmentSlot slot : EquipmentSlot.values()) {
             ItemStack item = entity.getItemBySlot(slot);
-            if (item == null) continue;
+            if (item.getItem() == Items.AIR) continue;
 
-            // Set the attribute for this equipment to consider armor values and enchantments
-            // Actually getAttributeMap().a() is used with the previous item, to clear the Attributes
-            entity.getAttributes().removeAttributeModifiers(item.getAttributeModifiers(slot));
-            entity.getAttributes().addTransientAttributeModifiers(item.getAttributeModifiers(slot));
+            AttributeMap attributemapbase = entity.getAttributes();
+
+            item.forEachModifier(slot, (holder, attributemodifier) -> {
+                AttributeInstance attributemodifiable = attributemapbase.getInstance(holder);
+
+                if (attributemodifiable != null) {
+                    attributemodifiable.removeModifier(attributemodifier.id());
+                    attributemodifiable.addTransientModifier(attributemodifier);
+                }
+            });
 
             // This is also called by super.tick(), but the flag this.bx is not public
             List<Pair<EquipmentSlot, ItemStack>> list = Lists.newArrayList();
             list.add(Pair.of(slot, item));
-            Packet packet = new ClientboundSetEquipmentPacket(entity.getId(), list);
-            entity.getLevel().chunkSource.broadcast(entity, packet);
+            Packet<ClientGamePacketListener> packet = new ClientboundSetEquipmentPacket(entity.getId(), list);
+            entity.serverLevel().chunkSource.broadcast(entity, packet);
         }
     }
 
@@ -117,28 +128,25 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
     public void syncOffline(Player player) {
         ServerPlayer entity = ((CraftPlayer) player).getHandle();
 
-        if (!(entity instanceof NpcPlayer)) {
+        if (!(entity instanceof NpcPlayer npcPlayer)) {
             throw new IllegalArgumentException();
         }
 
-        NpcPlayer npcPlayer = (NpcPlayer) entity;
         NpcIdentity identity = npcPlayer.getNpcIdentity();
         Player p = Bukkit.getPlayer(identity.getId());
         if (p != null && p.isOnline()) return;
 
-        PlayerDataStorage worldStorage = ((CraftWorld) Bukkit.getWorlds().get(0)).getHandle().getServer().playerDataStorage;
-        CompoundTag playerNbt = worldStorage.getPlayerData(identity.getId().toString());
-        if (playerNbt == null) return;
+        PlayerDataStorage worldStorage = ((CraftWorld) Bukkit.getWorlds().getFirst()).getHandle().getServer().playerDataStorage;
+        CompoundTag playerNbt = worldStorage.load(identity.getName(), identity.getId().toString()).orElse(null);
 
-        // foodTickTimer is now private in 1.8.3 -- still private in 1.12
+        // foodTickTimer is now private in 1.8.3 -- still private in 1.12 -- still private in 1.20.6
         Field foodTickTimerField;
         int foodTickTimer;
-
         try {
             //Although we can use Mojang mappings when developing, We need to use the obfuscated field name
-            //until we can run a full Mojmapped server. I personally used this site when updating to 1.18:
-            //https://nms.screamingsandals.org/1.18.1/net/minecraft/world/food/FoodData.html
-            foodTickTimerField = FoodData.class.getDeclaredField("d");
+            //until we can run a full Mojmapped server. I personally used this site when updating to 1.20.6:
+            // https://mappings.cephx.dev/1.20.6/net/minecraft/world/food/FoodData.html
+            foodTickTimerField = FoodData.class.getDeclaredField("d"); // todo fix
             foodTickTimerField.setAccessible(true);
             foodTickTimer = foodTickTimerField.getInt(entity.getFoodData());
         } catch (NoSuchFieldException | IllegalAccessException e) {
@@ -154,11 +162,11 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
         playerNbt.putInt("foodTickTimer", foodTickTimer);
         playerNbt.putFloat("foodSaturationLevel", entity.getFoodData().getSaturationLevel());
         playerNbt.putFloat("foodExhaustionLevel", entity.getFoodData().exhaustionLevel);
-        playerNbt.putShort("Fire", (short) entity.remainingFireTicks);
+        playerNbt.putShort("Fire", (short) entity.getRemainingFireTicks());
         playerNbt.put("Inventory", npcPlayer.getInventory().save(new ListTag()));
 
-        File file1 = new File(worldStorage.getPlayerDir(), identity.getId().toString() + ".dat.tmp");
-        File file2 = new File(worldStorage.getPlayerDir(), identity.getId().toString() + ".dat");
+        File file1 = new File(worldStorage.getPlayerDir(), identity.getId() + ".dat.tmp");
+        File file2 = new File(worldStorage.getPlayerDir(), identity.getId() + ".dat");
 
         try {
             NbtIo.writeCompressed(playerNbt, new FileOutputStream(file1));
@@ -176,8 +184,8 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
         ServerPlayer p = ((CraftPlayer) player).getHandle();
 
         for (ServerPlayer serverPlayer : MinecraftServer.getServer().getPlayerList().getPlayers()) {
-            ClientboundPlayerInfoPacket packet = new ClientboundPlayerInfoPacket(
-                    ClientboundPlayerInfoPacket.Action.ADD_PLAYER, serverPlayer);
+            ClientboundPlayerInfoUpdatePacket packet = new ClientboundPlayerInfoUpdatePacket(
+                ClientboundPlayerInfoUpdatePacket.Action.ADD_PLAYER, serverPlayer);
             p.connection.send(packet);
         }
     }
@@ -186,7 +194,7 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
     public void removePlayerList(Player player) {
         ServerPlayer p = ((CraftPlayer) player).getHandle();
         for (ServerPlayer serverPlayer : MinecraftServer.getServer().getPlayerList().getPlayers()) {
-            ClientboundPlayerInfoPacket packet = new ClientboundPlayerInfoPacket(ClientboundPlayerInfoPacket.Action.REMOVE_PLAYER, serverPlayer);
+            ClientboundPlayerInfoRemovePacket packet = new ClientboundPlayerInfoRemovePacket(List.of(serverPlayer.getUUID()));
             p.connection.send(packet);
         }
     }
